disable user entity
