# openapi-spec.yaml
@@ -639,89 +639,93 @@ paths:
               schema:
                 $ref: "#/components/schemas/User"
   /users/{id}/:
-    get:
-      summary: Get user
-      operationId: FindUser
-      tags:
-        - user
-      parameters:
-        - in: path
-          name: id
-          description: User id
-          required: true
-          schema:
-            type: number
-      responses:
-        '200':
-          description: ok
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/User"
-        404:
-          description: not found
-        default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-    patch:
-      summary: Update user
-      operationId: UpdateUser
-      tags:
-        - user
-      parameters:
-        - in: path
-          name: id
-          description: User id
-          required: true
-          schema:
-            type: number
-      requestBody:
-        content:
-          application/json:
+    $ref: '#/paths/schemas/UsersPaths'
+  /users/fid/{id}/:
+    $ref: '#/paths/schemas/UsersPaths'
+  schemas:
+    UsersPaths:
+      get:
+        summary: Get user
+        operationId: FindUser
+        tags:
+          - user
+        parameters:
+          - in: path
+            name: id
+            description: User id
+            required: true
             schema:
-              $ref: "#/components/schemas/UserCreateOrUpdateRequest"
-      responses:
-        200:
-          description: Ok
+              type: number
+        responses:
+          '200':
+            description: ok
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/User"
+          404:
+            description: not found
+          default:
+            description: unexpected error
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/Error"
+      patch:
+        summary: Update user
+        operationId: UpdateUser
+        tags:
+          - user
+        parameters:
+          - in: path
+            name: id
+            description: User id
+            required: true
+            schema:
+              type: number
+        requestBody:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/User"
-        404:
-          description: User not found
-        default:
-          description: Unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-    delete:
-      summary: Delete user
-      operationId: DeleteUser
-      tags:
-        - user
-      parameters:
-        - in: path
-          name: id
-          description: User id
-          required: true
-          schema:
-            type: number
-      responses:
-        204:
-          description: Ok
-        404:
-          description: User not found
-        default:
-          description: Unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-
+                $ref: "#/components/schemas/UserCreateOrUpdateRequest"
+        responses:
+          200:
+            description: Ok
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/User"
+          404:
+            description: User not found
+          default:
+            description: Unexpected error
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/Error"
+      delete:
+        summary: Delete user
+        operationId: DeleteUser
+        tags:
+          - user
+        parameters:
+          - in: path
+            name: id
+            description: User id
+            required: true
+            schema:
+              type: number
+        responses:
+          204:
+            description: Ok
+          404:
+            description: User not found
+          default:
+            description: Unexpected error
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/Error"
 components:
   securitySchemes:
     bearerAuth:
